modified ci.yaml file

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -2,8 +2,8 @@ name: ci
 on:
   push:
     branches:
-    - master
-    - main
+      - master
+      - main
 permissions: 
   contents: write
 jobs:
@@ -12,11 +12,11 @@ jobs:
     steps: 
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
-          with:
-            python-version: 3.x
-      - uses: action/cache@v2
-          with:
-            key: ${{github.ref}}
-            path: .cache
+        with:
+          python-version: 3.x
+      - uses: actions/cache@v2
+        with:
+          key: ${{github.ref}}
+          path: .cache
       - run: pip install mkdocs-material
       - run: mkdocs gh-deploy --force
